# friendly-advice-columnist

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements-web.txt  requirements.txt  tailwind.config.js  training.py
.cursor/features/: 10-DONE-add-check-to-ensure-that-question-relates-to-interpersonal-and-relationship-issues.md  11-CLOSED-add-multiple-models-to-use-with-front-end-app.md  11-add-multiple-models-to-use-with-front-end-app.md  12-DONE-add-ability-to-save-sessions-and-record-a-history-of-questions-that-you-asked.md  12-add-ability-to-save-sessions-and-record-a-history-of-questions-that-you-asked.md  13-DONE-deploy-application-to-aws.md  13-deploy-application-to-aws.md  15-DONE-post-deployment-fast-follow-custom-domain-cors-waf-and-cleanup.md  15-post-deployment-fast-follow-custom-domain-cors-waf-and-cleanup.md  3-CLOSED-make-training-script-output-files-in-a-default-training-directory-inside-of-outputs.md  8-DONE-build-out-the-front-end-application-for-the-ai-advice-column-app.md  8-build-out-the-front-end-application-for-the-ai-advice-column-app.md  9-add-the-ability-to-ask-the-model-follow-up-questions.md
.cursor/progress/: 7-DONE-aws-deployment-handoff.md  7-aws-deployment-handoff.md
.cursor/qa/: 2-build-an-ai-scorer-that-benchmarks-model-outputs-against-each-other.md  3-DONE-do-another-round-of-fine-tuning-with-minor-changes-to-prompt.md
.cursor/refactors/: 8-move-back-end-code-to-a-new-api-folder.md
.cursor/research/: 1-CLOSED-look-into-overfit-and-underfit-models.md
app/: CLAUDE.md  dynamodb.py  main.py  session.py
app/routes/: advice.py  conversations.py
app/static/css/: input.css  styles.css
app/static/js/: api-key.js  sessions.js
app/templates/: base.html  index.html
backups/: training_backup_phase3_backup.py
docs/: DEPLOYMENT.md
models/: __init__.py  openai_backend.py  prompts.py
qa/: advice_mvp.py  prepare_openai_dataset.py  run_inference.py  test_prompts_v3.md
scripts/: convert_to_jsonl.py  diagnose_training.py  load_checkpoint.py  normalize_dataset.py
sources/scripts/: clean_training_data.py
tests/: conftest.py
tests/app/: test_advice_api.py  test_session.py  test_session_ui.py
training/: data.py
