[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bump2version]
current_version = "1.3.0"
commit = true
tag = true
files = ["pyproject.toml"]

[project]
name = "friendly-advice-columnist"
version = "1.3.0"
description = "AI-powered friendly advice columnist."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Graham Nessler"}
]
keywords = ["llm", "gpt", "transformer", "language-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "bump2version>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# These files use sys.path.insert before imports, which is required for the project layout
"app/main.py" = ["E402"]
"qa/advice_mvp.py" = ["E402"]
"qa/prepare_openai_dataset.py" = ["E402"]
"tests/**/test_*.py" = ["E402"]
# Backup files are archived snapshots, not actively maintained
"backups/*.py" = ["F821"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
